docs: get rule controller
